--- a/pages/diy/diypages/diypages.wxml
+++ b/pages/diy/diypages/diypages.wxml
@@ -488,9 +488,9 @@
     <view style="background:{{params.styledata==1?'url('+params.backgroundimg+')':''}} {{params.positiony}} {{params.positionx}} {{params.repeat}} {{style.background}};background-size:{{params.size==1?'cover':style.sizew+'%'}} {{params.size==1?'':style.sizeh+'%'}};margin-top:{{style.mt*2}}rpx;padding:{{style.paddingtop*2}}rpx {{style.paddingleft*2}}rpx">
         <view bindtap="redirectto" class="display-inline-block " data-link="/sudu8_page/coupon/coupon" data-linktype="page" style="width:{{100/params.rownum}}%;" wx:for="{{coupon}}" wx:key="index">
             <view style="margin:{{style.paddingtop*2}}rpx {{style.paddingleft*2}}rpx;border-radius:10rpx;height:100rpx;color:{{style.color}};background:linear-gradient(to right, {{style.yhqbg}} 0%,{{style.yhqbg2}} 100%);position:relative;padding:20rpx 0;overflow:hidden">
-                <view class="" style="font-size:28rpx;width:100%;text-align:center;">¥ <text style="font-size:36rpx">{{item.price}}</text>
+                <view class="" style="font-size:28rpx;width:100%;text-align:center;">¥ <text style="font-size:36rpx">{{item.money}}</text>
                 </view>
-                <view class="" style="font-size:{{params.rownum==2?'28':'24'}}rpx;width:100%;text-align:center;margin-top:8rpx">满{{item.pay_money}}元可用</view>
+                <view class="" style="font-size:{{params.rownum==2?'28':'24'}}rpx;width:100%;text-align:center;margin-top:8rpx">满{{item.use_price}}元可用</view>
                 <view class="yhqj1" style="background-color:{{style.background}}"></view>
                 <view class="yhqj2" style="background-color:{{style.background}}"></view>
             </view>
