--- a/pages/settlement/settlement.wxss
+++ b/pages/settlement/settlement.wxss
@@ -789,7 +789,7 @@ radio .wx-radio-input.wx-radio-input-checked::before {
 }
 
 .order_list {
-  margin-top: 30rpx;
+  margin: 30rpx 10rpx 0 10rpx;
 }
 
 .order_list_content {
