--- a/pages/good/good.wxss
+++ b/pages/good/good.wxss
@@ -1,95 +1,109 @@
 /**index.wxss**/
-.nav_left{
-  position:fixed;
-  left:0;
-  top:0;
-  width:200rpx;
-  background:#fff;
-  height:100%;
-  z-index:1001;
-  border-right:solid 1rpx  #C9C9C9;
+
+.nav_left {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 200rpx;
+  background: #fff;
+  height: 100%;
+  z-index: 1001;
+  border-right: solid 1rpx #c9c9c9;
 }
-.nav_right{
+
+.nav_right {
   width: 550rpx;
   margin-left: 200rpx !important;
   overflow: scroll;
 }
-.nac_left_li{
-  line-height:24px;
-  font-size:26rpx;
-  color:#000;
+
+.nac_left_li {
+  line-height: 24px;
+  font-size: 26rpx;
+  color: #000;
   text-align: center;
-  margin:8px 0 8px 0px;
+  margin: 8px 0 8px 0px;
 }
-.good_box{
+
+.good_box {
   display: flex;
   flex-wrap: wrap;
 }
-.nav_goods_box{
- width:33.33%;
-text-align:center;
 
-margin-top:20rpx;
-margin-bottom:20rpx;
-
+.nav_goods_box {
+  width: 33.33%;
+  text-align: center;
+  margin-top: 20rpx;
+  margin-bottom: 20rpx;
 }
+
 /* .nav_right_box {
   margin: 0 auto;
 } */
-.nav_goods_name{
+
+.nav_goods_name {
   padding-left: 15rpx;
-  line-height:20px;
-  font-size:12px;
-  color:#333;
+  line-height: 20px;
+  font-size: 12px;
+  color: #333;
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 1;
-  overflow:hidden;
+  overflow: hidden;
   -webkit-box-orient: vertical;
   width: 150rpx;
 }
-.nav_goods_price{
-  line-height:20px;
-  font-size:18px;
-  color:red;
+
+.nav_goods_price {
+  line-height: 20px;
+  font-size: 18px;
+  color: red;
 }
-.nav_right_tit{
+
+/* .nav_right_tit {
   width: 550rpx;
-  line-height:30px;
-  font-size:16px;
-  color:#333;
+  line-height: 30px;
+  font-size: 16px;
+  color: #333;
+} */
+
+.active {
+  color: #ff2f00;
+  border-left: solid #ff2f00 1rpx;
 }
-.active{
-  color: #FF2F00;
-  border-left:solid #FF2F00 1rpx;  
+
+.dv1 {
+  width: 280rpx;
+  height: 44rpx;
+  position: relative;
+  overflow: hidden;
+  margin: 10px auto;
 }
-    .liner {
-            width:100%;
-            height:1px;
-            background-color: #ccc;
-            position: relative;
-            top:50%;
-        }
-          .dv1 {
-            width:253rpx;
-            height:px;
-            position:relative;
-            overflow:hidden;
-            margin: 10px auto;
-             }
-              .nav_right_tit {
-            text-align:center;
-            width:77px;
-            height:22px;
-            line-height: 22px;
-            margin:0 auto;
-            background-color: #fff;
-            position: relative;
-            z-index:3;
-            font-size: 30rpx;
-        }
-        .nav_goods_l{
-          width: 104rpx;
-          height: 104rpx;
-          
-        }
+
+.liner {
+  width: 100%;
+  height: 1px;
+  /* background-color: #f00; */
+  position: absolute;
+  top: 50%;
+  left: 0;
+  border-top: 2rpx solid #f00;
+}
+
+.nav_right_tit {
+  position: relative;
+  text-align: center;
+  width: 100px;
+  height: 22px;
+  line-height: 22px;
+  margin: 0 auto;
+  background-color: #fff;
+  z-index: 3;
+  font-size: 30rpx;
+  color: #333;
+}
+
+.nav_goods_l {
+  width: 104rpx;
+  height: 104rpx;
+}
