--- a/storage/pages/out_of_warehouse/out_of_warehouse.wxss
+++ b/storage/pages/out_of_warehouse/out_of_warehouse.wxss
@@ -5,9 +5,9 @@ page{background-color: #fff;}
 .header{display: flex; align-items: center; justify-content: space-around; padding: 20rpx;}
 .header .tea-img-box{width: 40px; height: 40px; overflow: hidden;}
 .header .tea-img-box image{width: 100%; height: 100%;}
-.header .tea-name{font-size: 28rpx; color: #797979; font-weight: 700;}
+.header .tea-name{font-size: 28rpx; color: #797979; font-weight: 700; max-width: 130rpx; white-space: nowrap; text-overflow: ellipsis; overflow: hidden;}
 .header .tea-date{font-size: 22rpx; color: #333; letter-spacing: 0;}
-.header .stock-addr{font-size: 20rpx; color: #999900; border-radius: 6rpx; border: 2rpx solid #999900; padding: 4rpx 10rpx;}
+.header .stock-addr{font-size: 20rpx; color: #999900; border-radius: 6rpx; border: 2rpx solid #999900; padding: 4rpx 10rpx; text-align: center; display: inline-block;}
 .real-time-stock{width: 430rpx; height: 110rpx; border: 2rpx solid #821006; border-radius: 6rpx; overflow: hidden;}
 .real-time-stock .real-time-title{background-color: #821006; font-size: 24rpx; color: #fff; text-align: center; padding: 8rpx 0;}
 .real-time-stock .stock-box{font-size: 24rpx; color: #811006; text-align: center; overflow: hidden; display: flex; align-items: center; justify-content: flex-end; height: 66rpx;}
