--- a/pages/order_detail/order_detail.wxss
+++ b/pages/order_detail/order_detail.wxss
@@ -216,3 +216,172 @@ margin-left: 100rpx;
   .hidden {
     display: none;
   }
+  /* 优惠劵 */
+
+.flex {
+  width: 670rpx;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.courier {
+  color: #333;
+  font-size: 26rpx;
+}
+
+.type_button {
+  color: #333 !important;
+  border-color: #333 !important;
+}
+
+.title {
+  display: flex;
+  align-items: center;
+  border-bottom: 1rpx solid #e4e4e4;
+}
+
+.title .title_list {
+  flex: 1;
+  text-align: center;
+  color: #6b6b6b;
+  font-size: 30rpx;
+  padding-bottom: 30rpx;
+  padding-top: 30rpx;
+}
+
+.coupon_box {
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 220rpx;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.coupon_money_box {
+  width: 250rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: #fff;
+  z-index: 9999999999;
+}
+
+.coupon_info_box {
+  padding: 20rpx;
+  display: flex;
+  flex-direction: column;
+  width: 400rpx;
+  color: red;
+  z-index: 9999999999;
+}
+.color-red {
+  color: red;
+}
+.money {
+  font-size: 50rpx;
+  font-weight: bold;
+}
+
+.money_unit {
+  font-size: 30rpx;
+  margin-left: 4rpx;
+}
+
+.limit {
+  font-size: 24rpx;
+}
+
+.coupon_name {
+  font-size: 35rpx;
+  line-height: 50rpx;
+  font-weight: 700;
+}
+.coupon_name,.validity, .range {
+  color:rgb(153, 0, 0);
+}
+.validity, .range, .go_use {
+  font-size: 20rpx;
+  line-height: 40rpx;
+}
+
+.go_use {
+  text-align: right;
+}
+
+.range {
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+}
+
+.hui {
+  color: #949494;
+}
+
+.coupon_box_img {
+  position: absolute;
+}
+
+.order_list {
+  margin: 30rpx 10rpx 0 10rpx;
+}
+
+.order_list_content {
+  display: flex;
+  align-items: center;
+}
+
+.coupon_content {
+  height: 750rpx;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  background: #fff;
+}
+
+.coupon_content_tip {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 30rpx 0;
+  width: 750rpx;
+}
+
+.coupon_content_left {
+  font-size: 35rpx;
+  background: #0bf;
+  color: #fff;
+  font-weight: bold;
+  padding: 10rpx 30rpx;
+  border-radius: 0rpx 30rpx 30rpx 4rpx;
+}
+
+.coupon_content_right {
+  display: flex;
+  align-items: center;
+  font-size: 26rpx;
+  color: #0bf;
+}
+
+.retrue_ico {
+  width: 68rpx;
+  margin-left: 10rpx;
+}
+
+.coupon_content_all {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+}
+
+/* 优惠劵 */
