--- a/storage/pages/zcDetail/zcDetail.wxml
+++ b/storage/pages/zcDetail/zcDetail.wxml
@@ -137,10 +137,10 @@
           <image src="./img/icon1.png" />
           <view>客服</view>
         </view>
-        <view class="cell addcart" bind:tap="go_car">
+        <!-- <view class="cell addcart" bind:tap="go_car">
           <image src="./img/cart.png" />
           <view>购物车</view>
-        </view>
+        </view> -->
         <view class="ft-btn">
           <text wx:if="{{item.state==1}}" bind:tap="switchDialog">去支持</text>
           <text wx:else>已结束</text>
