--- a/storage/pages/zcDetail/zcDetail.wxss
+++ b/storage/pages/zcDetail/zcDetail.wxss
@@ -55,7 +55,7 @@ view{overflow: initial !important;}
 .ftList .cell{line-height: normal; box-sizing: border-box; max-width: 100rpx; min-width: 13%; flex: 1; display: block; height: 100rpx; color: #999; position: relative;}
 .ftList .cell .kf{position: absolute; width: 100%; height: 100rpx; z-index: 99; opacity: 0;}
 .ftList image{width: 48rpx; height: 48rpx; display: block; margin: 8rpx auto 0;}
-.ftList .ft-btn{max-width: 450rpx; box-sizing: border-box; background-color: #cc363f; color: #fff; text-align: center; display: block; flex: 1;}
+.ftList .ft-btn{box-sizing: border-box; background-color: #cc363f; color: #fff; text-align: center; display: block; flex: 1;}
 .ftList .ft-btn text{display: block; height: 100%;}
 .fix-iphonex{bottom:68rpx!important;}
 .fix-iphonex::after {content: ' '; position: fixed; bottom: 0!important; height: 68rpx!important; width: 100%; background: #fff;}
