--- a/pages/members/members.wxml
+++ b/pages/members/members.wxml
@@ -78,7 +78,7 @@
   <view class="num_button">
     <view class="tik">
       <text>充值</text>
-      <text style='color: red;font-size:35rpx;line-height:37rpx;'>￥{{member_send*10000}}</text>
+      <text style='color: red;font-size:35rpx;line-height:37rpx;'>￥{{member_send}}</text>
       <text style="padding-left:20rpx;">送积分</text>
       <text style='color:red'>{{integral_send}}</text>
     </view>
