--- a/pages/integral_good_detail/integral_good_detail.wxss
+++ b/pages/integral_good_detail/integral_good_detail.wxss
@@ -247,7 +247,7 @@ text-decoration: line-through;
   font-size: 30rpx;
 }
 .buy{
- background: #FF2401;
+ background: #cc363f;
   color: #fff;
   font-size: 30rpx;
   
