--- a/pages/live/index/index.wxml
+++ b/pages/live/index/index.wxml
@@ -1,6 +1,14 @@
 <!-- live/index/index.wxml -->
 <view class='main'>
-  <view class='nav'>
+<scroll-view scroll-x="true" style="height: 125rpx;white-space: nowrap; display: flex;  border-bottom: 3rpx solid rgb(204, 204, 204);">
+    <view class="list " wx:for="{{ico}}" wx:key="{{index}}" data-current="{{index}}" bindtap="swichNav">
+        <view class='ico'>
+          <image src='http://zhihuichacang.com/u2133.png'></image>
+        </view>
+        <view class="text {{currentTab==index ? ' text_1 ' : ''}}">{{item}}</view>
+    </view>  
+</scroll-view>
+  <!-- <view class='nav'>
     <view class="tea {{currentTab==0 ? ' change_current ' : ''}}" data-current="0" bindtap="swichNav">
       茶仓
     </view>
@@ -10,7 +18,7 @@
     <view class="tea {{currentTab==2 ? ' change_current ' : ''}}" data-current="2" bindtap="swichNav">
       茶厂
     </view>
-  </view>
+  </view> -->
   <view class='swiper_main'>
     <swiper current="{{currentTab}}" style='height: {{winHeight}}rpx' bindchange="bindChange">
       <swiper-item>
@@ -117,23 +125,6 @@
         </view>
       </swiper-item>
     </swiper>
-    <!-- <block wx:if="{{foot_is==2}}">
-      <view class="hbj footmenu" style="background:{{footinfo.style.bgcolor}};position:fixed;left:0;bottom:0;width:100%;z-index:9998;border-top:2rpx solid {{footinfo.style.bordercolor}};" wx:if="{{footinfo.params.navstyle==0}}">
-        <view bindtap="redirectto" class="zbj submenu" data-link="{{item.linkurl}}" data-linktype="{{item.linktype}}" style="width:{{footinfo.style.bdr==1?(750-(footinfo.count-1)*2)/footinfo.count+'rpx':100/footinfo.count+'%'}};float:left;border-right:{{footinfo.style.bdr==1?'2rpx solid '+footinfo.style.bdrcolor:''}};padding:10rpx 0 6rpx;" wx:for="{{footinfo.data}}">
-          <span class="iconfont {{item.iconclass}}" style="color:{{item.change? footinfo.style.iconcoloron : footinfo.style.iconcolor}};font-size:{{footinfo.style.iconfont*2}}rpx;padding:{{footinfo.style.paddingtop*2}}rpx 0;width:{{footinfo.style.iconfont*2}}rpx;height:{{footinfo.style.iconfont*2}}rpx;line-height:{{footinfo.style.iconfont*2}}rpx;width:100%; text-align: center; padding-left: 3px;"></span>
-          <view style="font-size:{{footinfo.style.textfont*2}}rpx;padding:{{footinfo.style.paddingleft*2}}rpx 0;color:{{item.change? footinfo.style.textcoloron : footinfo.style.textcolor}}; width:100%; text-align: center;" wx:if="{{footinfo.params.textshow==1}}">
-            {{item.text}}
-          </view>
-        </view>
-      </view>
-      <view class="footmenu" style="background:{{footinfo.style.bgcolor}};position:fixed;left:0;bottom:0;width:100%;z-index:10000;border-top:2rpx solid {{footinfo.style.bordercolor}};" wx:elif="{{footinfo.params.navstyle==1}}">
-        <view bindtap="redirectto" class="zbj submenu" data-link="{{item.linkurl}}" data-linktype="{{item.linktype}}" style="width:{{footinfo.style.bdr==1?(750-(footinfo.count-1)*2)/footinfo.count+'rpx':100/footinfo.count+'%'}};float:left;border-right:{{footinfo.style.bdr==1?'2rpx solid '+footinfo.style.bdrcolor:''}};padding:10rpx 0 6rpx;" wx:for="{{footinfo.data}}">
-          <image mode="widthFix" src="{{item.imgurl}}" style="display:block;margin:0 auto;width:{{footinfo.style.iconfont*2}}rpx;padding:{{footinfo.style.paddingtop*2}}rpx;"></image>
-          <view style="font-size:{{footinfo.style.textfont*2}}rpx;color:{{item.change? footinfo.style.textcolor : footinfo.style.textcoloron}};padding:{{footinfo.style.paddingleft*2}}rpx 0;text-align:center" wx:if="{{footinfo.params.textshow==1}}">
-            {{item.text}}
-          </view>
-        </view>
-      </view>
-    </block> -->
+ 
   </view>
 </view>
