--- a/pages/members/members.wxml
+++ b/pages/members/members.wxml
@@ -64,18 +64,18 @@
     </view>
     <view class='tip_text'>
       <view>1.当消费达到以上等级，即可成员该等级会员并享受等级会员服务；</view>
-      <view>2.您还可以直接等级会员充值，成为会员，充值有赠送哦~；</view>
-      <view>3.更多服务，了解会员权益，请查阅</view>
+      <!-- <view>2.您还可以直接等级会员充值，成为会员，充值有赠送哦~；</view> -->
+      <view>2.更多服务，了解会员权益，请查阅</view>
       <checkbox-group bindchange="read">
         <view style='color:#6B6B6B;'>
-          <checkbox value="是否已读"></checkbox>
+          <checkbox value="是否已读" checked></checkbox>
           我已阅读并同意
           <text style='color:#02A0E6;' bindtap='toda'>《会员权益协议》</text>
         </view>
       </checkbox-group>
     </view>
   </view>
-  <view class="num_button">
+  <!-- <view class="num_button">
     <view class="tik">
       <text>充值</text>
       <text style='color: red;font-size:35rpx;line-height:37rpx;'>￥{{member_send}}</text>
@@ -83,5 +83,5 @@
       <text style='color:red'>{{integral_send}}</text>
     </view>
     <view class='naext' bindtap="pay">下一步</view>
-  </view>
+  </view> -->
 </view>
