--- a/pages/withdrawal/withdrawal.wxss
+++ b/pages/withdrawal/withdrawal.wxss
@@ -100,6 +100,8 @@
 .btn-area button{
   color: #fff;
   background: #00BBFf;
+  height: 100rpx;
+  line-height: 100rpx;
   font-size: 30rpx;
   position: fixed;
   bottom: 0;
