--- a/pages/integral_good_detail/integral_good_detail.wxml
+++ b/pages/integral_good_detail/integral_good_detail.wxml
@@ -1,70 +1,71 @@
-<import src="../../wxParse/wxParse.wxml"/>
+<import src="../../wxParse/wxParse.wxml" />
 <view class='all'>
-	<view class='home_banner'>
-		<swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" circular="{{circular}}" duration="1000">
-			<block wx:for="{{goods.goods_show_images}}" wx:key="{{index}}">
-				<swiper-item class='swiper-item'>
-					<image src="{{url}}{{item}}" class="slide-image" />
-				</swiper-item>
-			</block>
-		</swiper>
+  <view class='home_banner'>
+    <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" circular="{{circular}}" duration="1000">
+      <block wx:for="{{goods.goods_show_images}}" wx:key="{{index}}">
+        <swiper-item class='swiper-item'>
+          <image src="{{url}}{{item}}" class="slide-image" />
+        </swiper-item>
+      </block>
+    </swiper>
 
-	</view>
-	<view class='goods_cont'>
-		<view class='good_name'>{{goods.goods_name}}</view>
-		<view class='selling-point'>{{goods.goods_selling}}</view>
-		<view class='price_cont'>
-			<view >
-				<view class='sale'><view class='sale_title'>积分</view>{{goods.integral}}</view>
-			</view>
-			<view class='share' >
-			<button open-type="share" >
-			</button>
-				<image src='http://zhihuichacang.com/u1492.png' class='footbar_ico'></image>
-				<view class='footbar_text' >分享</view>
-			</view>
-		</view>
-		
-		<view class='other_info'>
-			<view class='freight'>
-				运费：免费
-			</view>
-			<view class='inventory'>
-				库存888片
-			</view>
-			<view class='sales'>
-				销量213片
-			</view>
-		</view>
+  </view>
+  <view class='goods_cont'>
+    <view class='good_name'>{{goods.goods_name}}</view>
+    <view class='selling-point'>{{goods.goods_selling}}</view>
+    <view class='price_cont'>
+      <view>
+        <view class='sale'>
+          <view class='sale_title'>积分</view>{{goods.integral}}</view>
+      </view>
+      <view class='share'>
+        <button open-type="share">
+        </button>
+        <image src='http://zhihuichacang.com/u1492.png' class='footbar_ico'></image>
+        <view class='footbar_text'>分享</view>
+      </view>
+    </view>
 
-	</view>
-	
-	<view class='tab-box'>
-		
-		<view class="{{selected?'show':'hidden'}}">
-		   <template is="wxParse" data="{{wxParseData:article.nodes}}"/>
-		</view>
-	
-	</view>
+    <view class='other_info'>
+      <view class='freight'>
+        运费：免费
+      </view>
+      <view class='inventory'>
+        库存888片
+      </view>
+      <view class='sales'>
+        销量213片
+      </view>
+    </view>
 
-	<view class='footbar'>
-		<view class='ico_view' style='margin-left:10px'>
-                  <view class='service' bindtap="go_index">
-			  <button class="line" ></button>
-				<image src='../../images/index.png' class='footbar_ico'></image>
-				<view class='footbar_text'>首页</view>
-</view>
+  </view>
 
-			<view class='service' style='margin-right:10px'>
+  <view class='tab-box'>
 
-				<image src='http://zhihuichacang.com/u1510.png' class='footbar_ico'></image>
-				<view class='footbar_text'>客服</view>
-			</view>
+    <view class="{{selected?'show':'hidden'}}">
+      <template is="wxParse" data="{{wxParseData:article.nodes}}" />
+    </view>
 
-		</view>
-    
-		<view class='trade'>
-			<view class='buy' bindtap="showPopup"   data-id="{{goods.id}}">立即兑换</view>
-		</view>
-	</view>
+  </view>
+
+  <view class='footbar'>
+    <view class='ico_view' style='margin-left:10px'>
+      <view class='service' bindtap="go_index">
+        <button class="line"></button>
+        <image src='http://zhihuichacang.com/index.png' class='footbar_ico'></image>
+        <view class='footbar_text'>首页</view>
+      </view>
+
+      <view class='service' style='margin-right:10px'>
+
+        <image src='http://zhihuichacang.com/u1510.png' class='footbar_ico'></image>
+        <view class='footbar_text'>客服</view>
+      </view>
+
+    </view>
+
+    <view class='trade'>
+      <view class='buy' bindtap="showPopup" data-id="{{goods.id}}">立即兑换</view>
+    </view>
+  </view>
 </view>
