--- a/invoice/pages/invoice_add/invoice_add.wxss
+++ b/invoice/pages/invoice_add/invoice_add.wxss
@@ -110,6 +110,8 @@
 .btn-area{
     position: fixed;
     bottom: 0;
+    height: 100rpx;
+    line-height: 100rpx;
     color: #fff;
     background: #FF6600;
     width: 750rpx;
