--- a/pages/withdrawal/withdrawal.wxml
+++ b/pages/withdrawal/withdrawal.wxml
@@ -32,15 +32,15 @@
               </view>
             </view>
             <view class='card'>
-              <view class='select_card' bindtap='addCard' wx:if="{{!isBank}}">请添加银行卡>></view>
+              <view class='select_card' bindtap='addCard' wx:if="{{!isBank}}">请添加银行卡>> {{isBank}}</view>
               <view class='select_card' bindtap='selectCard' wx:if="{{isBank}}">请选择银行卡>></view>
               <view class='card_info' wx:if="{{showCard}}" wx:for="{{bankCard}}"
-                     wx:key="{{index}}" data-name="{{item.name}}" data-bank="{{item.two_bank}}" data-count="{{item.count}}" bindtap="chosenCard">
+                     wx:key="{{index}}" data-name="{{item.account_name}}" data-bank="{{item.bank_name}}" data-count="{{item.bank_card}}" bindtap="chosenCard">
                 <view class='card_list card_border'>开户名:
-                  <text class='text_color'>{{item.name}}</text>
+                  <text class='text_color'>{{item.account_name}}</text>
                 </view>
                 <view class='card_list card_border'>开户行:
-                  <text class='text_color'>{{item.two_bank}}</text>
+                  <text class='text_color'>{{item.bank_name}}</text>
                 </view>
                 <view class='card_list'>
                   <text decode="{{true}}">&ensp;&ensp;卡号: </text>
